--- a/人/电子计算机/编程语言/网页标记/html5.html
+++ b/人/电子计算机/编程语言/网页标记/html5.html
@@ -1,14 +1,34 @@
 <!DocType html>
-<html>
-    <head>
-        <title>HTML 5 富文本 书写</title>
-    </head> 
-    <body>
-        <section>
-        <h1>大文字</h1>   
+<html lang="zh-cn">
+
+<head>
+    <title>HTML 5 富文本 书写</title>
+</head>
+
+<body>
+    <section>
+        <h1>大文字</h1>
         <p>
             普通字 normal <i>斜体 italiy</i> <strong>着重 Strong</strong><del>删除 delete</del>
         </p>
-        </section>
-    </body>
+    </section>
+    <section>
+        <header>表单1</header>
+        <form action="a.php" id="form1">
+            <label for="username" form="form1">用户名</label><input type="text" name="username" id="">
+            <label for="tel" form="form1">手机</label><input type="tel" name="tel" id="">
+            <label for="address" form="form1">地址</label><input type="text" name="address" id="">
+            <input type="submit" form="form1" value="提交">
+            <label>date</label> <input type="date" name="date" id="" required>
+            <label>month</label> <input type="month" name="m" id="">
+            <label>datetime-local</label> <input type="datetime-local" name="d-time" id="">
+            <label>datetime</label> <input type="datetime" name="dt" id="">
+            <label>time</label> <input type="time" name="time" id="">
+            <label>range</label> <input type="range" name="hk" id="">
+        </form>
+    </section>
+    <hr>
+
+</body>
+
 </html>
