--- a/人/电子计算机/编程语言/网页标记/html5.html
+++ b/人/电子计算机/编程语言/网页标记/html5.html
@@ -7,7 +7,7 @@
         <section>
         <h1>大文字</h1>   
         <p>
-            普通字 normal <i>斜体 italiy</i> <strong>着重 Strong</strong><del>删除 delete</del>
+            普通字 normal <i>斜体 italiy</i> <strong>着重 Strong</strong><del>删除 delete</del><
         </p>
         </section>
     </body>
