--- a/人/电子计算机/编程语言/网页标记/css.html
+++ b/人/电子计算机/编程语言/网页标记/css.html
@@ -66,6 +66,37 @@
 			white-space: normal;
 		}
 
+		/* 颜色 */
+		.yanse span {
+			color: red;
+			opacity: 0.6;
+		}
+
+		/* 颜色渐变 */
+		.jianbian {
+
+			width: 50em;
+			height: 8em;
+			/* background: linear-gradient(45deg, blue, red); */
+			background: linear-gradient(0deg, blue, green 40%, red);
+
+		}
+
+		/* 倒影 */
+		.daoyin {
+			/* -webkit-box-reflect: below 1px linear-gradient(top, transparent, transparent 70%, rgba(0xff, 0xff, 0xff, 0.4)); */
+
+			-webkit-box-reflect: below 0 -webkit-linear-gradient(transparent, transparent 50%, rgba(255, 255, 255, .3));
+		}
+
+		.beijing {
+			width: 800px;
+			height: 500px;
+			background: url(./resource/1.png) left bottom no-repeat, url(./resource/2.png) right top no-repeat;
+/* //悬停效果 */
+
+
+		}
 	</style>
 </head>
 
@@ -120,13 +151,45 @@
 			<h1>文字换行</h1>
 		</legend>
 
-		<div class="wordwrap1"><strong>不换行 </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam reiciendis
+		<div class="wordwrap1"><strong>不换行 </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+			Totam reiciendis
 			accusamus a in maiores. Ullam fugiat veniam expedita sequi rerum non sunt error ipsum, vitae,
 			tempore architecto optio nostrum quis?</div>
-		<div class="wordwrap2"><strong>换行 </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam reiciendis
+		<div class="wordwrap2"><strong>换行 </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+			Totam reiciendis
 			accusamus a in maiores. Ullam fugiat veniam expedita sequi rerum non sunt error ipsum, vitae,
 			tempore architecto optio nostrum quis?</div>
 	</section>
+	<section>
+		<legend>
+			<h1>颜色</h1>
+		</legend>
+
+		<p class="yanse">
+			<span>透明
+				color: red;
+				opacity: 0.6;
+
+				渐变 background:linear-gradient(rgba(255,255,255,0.75),rgba(0,0,0,0.7));
+			</span>
+		</p>
+		<div class="jianbian">he</div>
+		<hr>
+
+		<div>
+			<label for="">盒子倒影</label>
+			<img class="daoyin" src="./resource/640.gif" alt="" srcset="">
+		</div>
+
+		<hr>
+		<div>
+			<label for="">多背景</label>
+			<div class="beijing">背景</div>
+		</div>
+
+	</section>
+
+
 </body>
 
 </html>
