--- a/机器/计算机/功能定义/编程语言/code/html5.html
+++ b/机器/计算机/功能定义/编程语言/code/html5.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="html.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <section>
         <h1>表单</h1>
         <form action="" id="" form_id" name="form_name" method="" autocomplete="" enctype="">
-            <input type="text">文本
+            <input type="text" ondblclick="javascript:console.log('dbclick')" onkeypress="javascript:console.log('onkeypress')" onkeyup="javascript:console.log('onkeyup')">文本
             <br>
             <input type="tel">电话
             <br>
@@ -39,13 +40,13 @@
             <br>
             <input type="range" max="" min="">范围选择
             <br>
+            <input type="file" multiple="" accept=".rar">文件上传
+            <br>
             <input type="emaill">邮件(自带校验）
             <br>
             <input type="url">地址（自带校验）
             <br>
-            <input type="file" multiple="">文件上传
-            <br>
-            <select name="" id="">选择输入框
+           <select name="" id="">选择输入框
                 <option>选项1</option>
             </select>
 
@@ -55,9 +56,11 @@
             <br>
             <input type="submit">
             <br>
-            <button type="sumit" form="form_id">提交
+            <button type="sumit" form="form_id">按钮提交</button>
         </form>
-    </section>
+
+        <hr>
+   </section>
 
     <hr>
 
