--- a/机器/计算机/功能定义/编程语言/code/fileupload.html
+++ b/机器/计算机/功能定义/编程语言/code/fileupload.html
@@ -20,7 +20,22 @@
 			<input type="file" name="file" accept="image/*">
 			<input type="submit" value="提交">
 		</form>
+
 	</section>
+
+	<section>
+		<header>
+			<h1>文件上传</h1>
+		</header>
+		<form action="fileupload.php" enctype="multipart/form-data" method="POST">
+			<label for="">请输入姓名</label>
+			<input type="text" name="name" id="">
+			<label for="">请选择文件</label>
+			<input type="file" name="file" accept="image/*">
+			<input type="submit" value="提交">
+		</form>
+	</section>
+
 </body>
 
 </html>
